<resources>
    <string name="app_name">NShare</string>
    <string name="title_activity_event1">Event1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="clear_all">Clear all notes</string>
    <string name="about_app">About NShare</string>
    <string name="help">Help</string>
    <string name="my_info">My Information</string>
    <string name="signout">Sign Out</string>
    <string name="manual">
    Don’t know where to start? Relax, let us help you!
<b> NShare</b> is designed to be simple and yet effective.<br/>
How to write new note;<br/>
1. Click the plus (+) icon on bottom right.<br/>
2. Enter title and description of your note.<br/>
3. Click save.<br/>
It is that simple!<br/>
<br/>
How to delete a note;<br/>
1. Click the share icon on bottom right of note.<br/>
2. Choose App/channel to share.<br/>
3. Share it.<br/>
Sounds interesting right?<br/>
<br/>
How to edit note;<br/>
1. Click the pencil icon on bottom left of note.<br/>
2. Edit title and/or description of your note.<br/>
3. Click save.<br/>
So easy, right?<br/>

How to delete a note;<br/>
1. Slide a note either left or right.<br/>
It’s gone!<br/>
<b>NB:</b> No recovery possible, choose wisely!<br/>
<br/>
How to refresh all notes list;<br/>
1. Click three dots on top right.<br/>
2. Click ‘Refresh’.<br/>
<br/>
How to delete all notes;<br/>
1. Click three dots on top right.<br/>
2. Click ‘Clear all notes’.<br/>
<b>NB:</b> No recovery possible, choose wisely!<br/>
<br/>
To know which version of <b>NShare</b> installed;<br/>
1. Click three dots on top right.<br/>
2. Click ‘About NShare’.<br/>
<br/>
To know your information;<br/>
1. Click three dots on top right.<br/>
2. Click ‘My Information’.<br/><br/>
Need a break? To sign-out;<br/>
1. Click three dots on top right.<br/>
2. Click ‘Sign Out’.
    </string>
</resources>