<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--    <item-->
    <!--        android:id="@+id/add"-->
    <!--        android:icon="@android:drawable/ic_menu_add"-->
    <!--        android:title="@string/add"-->
    <!--        app:showAsAction="ifRoom" />-->
    <!--    <item-->
    <!--        android:id="@+id/reset"-->
    <!--        android:icon="@android:drawable/ic_"-->
    <!--        android:title="@string/reset"-->
    <!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_app"
        android:title="@string/about_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_info"
        android:title="@string/my_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/signout"
        android:title="@string/signout"
        app:showAsAction="never" />
</menu>